kubernetes-minikube-main/kubernetes-minikube-main/myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice1
  template:
    metadata:
      labels:
        app: myservice1
    spec:
      containers:
        - image: athisayah/myservice1:latest
          imagePullPolicy: IfNotPresent
          name: myservice1
      restartPolicy: Always
