kubernetes-minikube-main/kubernetes-minikube-main/myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice1
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice1
  type: NodePort
